# Restaurent_Voice-AI

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/chroma/: chroma.sqlite3
data/knowledge/: faq.md  menu.md  policies.md  restaurant-info.md
deploy/: .dockerignore  Dockerfile  docker-compose.test.yml  docker-compose.yml
docs/: api-design.md  architecture.md  conversation-graph.md  database-design.md  folder-structure.md  implementation-roadmap.md  langgraph-design.md  progress.md  project-context.md  rag-design.md  stage-7-voice-pipeline.md  stage-8a-production-readiness.md  stage-8c-twilio-incoming-calls.md
examples/voice_demo/: app.js  index.html
migrations/: README  env.py
migrations/versions/: 20260721_0001_initial_reservation_schema.py  20260721_0002_conversation_audit.py  20260722_0003_twilio_call_sessions.py
scripts/: ingest_knowledge.py  load_test_text.py  load_test_voice.py  migrate.py  run_dev.sh  seed_tables.py  startup.sh  test_multiturn_conversation.py  test_production_stack.py  test_retrieval.py  test_voice_websocket.py  verify_production_config.py  wait_for_postgres.py  wait_for_redis.py
src/restaurant_voice_ai/: __init__.py  main.py
src/restaurant_voice_ai/api/: router.py
tests/: conftest.py  test_conversation_api.py  test_health.py  test_reservations.py
tests/conversation/: __init__.py  helpers.py  test_clarification.py  test_entity_extractor.py  test_graph_routing.py  test_intent_classifier.py  test_knowledge_flow.py  test_reservation_flows.py  test_response_identity.py
tests/integration/: test_infrastructure.py
tests/production/: test_audit.py  test_controls.py  test_dispatcher_idempotency.py  test_redis_memory.py
tests/rag/: helpers.py  test_bm25_store.py  test_chunking.py  test_embedding_providers.py  test_google_provider.py  test_hybrid_retriever.py  test_knowledge_api.py  test_rag_configuration.py  test_rag_service.py
tests/voice/: test_twilio_webhooks.py  test_voice_core.py  test_websocket_endpoint.py
(+126 files in other folders)
