[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multilingual-restaurant-voice-ai"
version = "0.8.0"
description = "Multilingual AI Restaurant Voice Receptionist"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14,<2.0",
    "asyncpg>=0.30,<1.0",
    "chromadb>=1.0,<2.0",
    "fastapi>=0.115,<1.0",
    "greenlet>=3.1,<4.0",
    "google-genai>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "openai>=1.60,<3.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "pypdf>=5.0,<7.0",
    "prometheus-client>=0.21,<1.0",
    "python-multipart>=0.0.20,<1.0",
    "rank-bm25>=0.2.2,<1.0",
    "redis>=5.2,<7.0",
    "python-dotenv>=1.0,<2.0",
    "sqlalchemy>=2.0,<3.0",
    "twilio>=9.4,<10.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
local-embeddings = ["sentence-transformers>=3.4,<6.0"]
voice-google = [
    "google-cloud-speech>=2.30,<3.0",
    "google-cloud-texttospeech>=2.25,<3.0",
]
load = ["locust>=2.32,<3.0", "websocket-client>=1.8,<2.0"]
dev = [
    "aiosqlite>=0.20,<1.0",
    "httpx>=0.28,<1.0",
    "mypy>=1.14,<2.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.25,<1.0",
    "ruff>=0.9,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/restaurant_voice_ai"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "integration: requires external infrastructure",
    "redis: requires Redis",
    "postgres: requires PostgreSQL",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
plugins = ["pydantic.mypy"]
